# django-keycloak-example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
dcloak/: asgi.py  settings.py  urls.py  wsgi.py
primary/: urls.py  views.py
primary/control/: keycloak.py  role_ctl.py  view_ctl.py  views.py
primary/templates/: base.html  index.html  special.html
